opened commented span class in home.html

--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
   <!-- Parallax Sections -->
   <section class="pimg1">
     <div class="ptext">
-      <!--<span class="textBg"> Xertz Studios </span>-->
+      <span class="textBg"> Xertz Studios </span>
     </div>
   </section>
   <section class="section section-dark">
