--- a/faq.html
+++ b/faq.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      /* Global reset */
+      * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+      }
+
+      html, body {
+          width: 100%;
+          height: 100%;
+      }
+  </style>
     <script src="./js/include.js" defer></script>
     <script src="./js/expand.js" defer></script>
     <script src="./js/script.js" defer></script>
@@ -20,7 +33,7 @@
 
     <title>FAQ</title>
   </head>
-  <body style = "margin: 0px; padding: 0px; ">
+  <body style = "margin: 0px; padding: 0px; box-sizing: border-box; overflow-x: hidden;">
     <header>
         <div class="header-content" style = "background-color: #07071d;">
           <canvas id="logoparticleeffect" class="logo-canvas"></canvas>
