created careerform page and added careers page

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <ul class="nav-links">
           <li><a href="home.html" class="link">Home</a></li>
            <li><a href="about.html" class="link"> About Us</a></li>
-           <!-- <li><a href="careers.html" class="link"> Careers</a></li> -->
+           <li><a href="careers.html" class="link"> Careers</a></li>
           <li><a href="project.html" class="link"> Projects</a></li>
           <li><a href="gallery.html" class="link"> Gallery</a></li>
           <li><a href="faq.html" class="link"> FAQ</a></li>    
@@ -54,7 +54,7 @@
         <ul class="nav-links-mobile">
           <li><a href="home.html" class="link-mobile"> Home</a></li>
           <li><a href="about.html" class="link-mobile"> About</a></li>
-          <!-- <li><a href="careers.html" class="link-mobile"> Careers</a></li> -->
+          <li><a href="careers.html" class="link-mobile"> Careers</a></li>
           <li><a href="project.html" class="link-mobile"> Projects</a></li>
           <li><a href="gallery.html" class="link-mobile"> Gallery</a></li>
          
